--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="/src/style.css" rel="stylesheet" />
   </head>
   <body>
-    <h1 class="text-3xl font-bold underline text-blue-400">Hello world!</h1>
+    <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
